--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src/."
   },
   "eslintConfig": {
     "extends": [
@@ -38,7 +39,11 @@
   },
   "devDependencies": {
     "autoprefixer": "^9",
+    "eslint": "^8.4.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.1",
     "postcss": "^7",
+    "prettier": "2.5.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
