--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
     ]
   },
   "devDependencies": {
+    "ailwindcss": "npm:@tailwindcss/postcss7-compat",
     "autoprefixer": "^9",
-    "eslint": "^8.4.1",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint": "7.11.0",
+    "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-react": "^7.27.1",
     "postcss": "^7",
     "prettier": "2.5.1",
